ft--misplaced text alignment on home page fixed

--- a/pages/pagestyles/home.module.scss
+++ b/pages/pagestyles/home.module.scss
@@ -42,6 +42,9 @@
         color: var(--secondary-color);
         font-weight: 300;
         width: 40rem;
+        @media screen and (max-width: 26.43rem){
+          width: 100%;
+        }
     }
 
     p {
